# packs

./: .gitignore  .vsls.json  CONTRIBUTING.md  README.md  beet.yaml  pyproject.toml  run.py
beet_plugins/: bolt_entry_point.py  build.py  json_helpers.py  main.py  nbt_literals.py  objectives.py
datapacks/1.18/better_item_frames/: items.bolt  main.bolt
datapacks/1.18/invisible_item_frames/: config.yaml  pack.yaml
datapacks/1.19/better_item_frames/: items.bolt  main.bolt  pack.yaml
datapacks/1.19/test/: config.yaml  main.bolt  pack.yaml
datapacks/invisible_item_frames/: beet.json
lib/: base_location.py  base_locations.bolt  config.yaml  custom_model_data.py  entry_point.bolt  helpers.py  metadata.py  pack_config.py  pack_formats.yaml  resource_location.py  resource_locations.bolt  run_after_pack.py  run_last.py  types.py  version.py  vt.py
lib/datapacks/: give_loot_table.bolt  hide_command_feedback.bolt  info_advancements.bolt  item.bolt  lantern_load.bolt  load.bolt  load_status.bolt  nbt_recipe.bolt  objectives.bolt  temp_objective.bolt  uninstall.bolt
lib/datapacks/config/: config.bolt  helpers.py  models.bolt  models.py  player_config.bolt  player_config.py  server_config.bolt  server_config.py  types.py
lib/datapacks/fault_checking/: function_permission_level.bolt  load_tag_not_loaded.bolt  max_command_chain_length.bolt  vt_not_uninstalled.bolt
lib/datapacks/function_wrappers/: clock.bolt  craft.bolt  join_or_load.bolt  load.bolt  uninstall.bolt
lib/datapacks/functions/: clock.bolt  join_or_load.bolt  load.bolt  uninstall.bolt
lib/datapacks/scoreboard/: constant.bolt  objectives.bolt
scripts/: build.py
