[tool.poetry]
name = "packs"
version = "1.0.0"
description = "Some of the packs on https://vanillatweaks.net"
authors = ["VanillaTweaks <team@vanillatweaks.net>"]

[tool.poetry.dependencies]
python = "^3.10"
beet = "^0.80.1"
mecha = "^0.61.0"
bolt = "^0.21.0"
PyYAML = "^6.0"
minecraft-text-components = {extras = ["beet"], version = "^3.1.2"}
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[tool.pyright]
typeCheckingMode = "strict"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
