[tool.poetry]
name = "packs"
version = "1.0.0"
description = "Some of the packs on https://vanillatweaks.net"
authors = ["VanillaTweaks <team@vanillatweaks.net>"]

[tool.poetry.dependencies]
python = "^3.11"
beet = "^0.83.1"
mecha = "^0.65.1"
bolt = "^0.26.0"
PyYAML = "^6.0"
minecraft-text-components = {extras = ["beet"], version = "^3.1.2"}
pydantic = "^1.10.4"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.12.0"

[tool.pyright]
typeCheckingMode = "strict"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
